# current_lines_3d

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data_preparing/: create_data_files.py
data_preparing/source_files/: dump.dmp
doc/: CMakeLists.txt  Doxyfile.in
include/CurrentLines/: CurrentLineGenerator.hpp
libs/: CMakeLists.txt
libs/CurrentLines/: CMakeLists.txt
libs/CurrentLines/include/: CurrentLine.h  CurrentLineGenerator.h  Gauss.h  Interpolation.h  Interpolator.h
libs/CurrentLines/src/: CurrentLine.cpp  CurrentLineGenerator.cpp  Interpolation.cpp  Interpolator.cpp
libs/CurrentLines/tests/: CMakeLists.txt  test.cpp
libs/CurrentLines/tests/src/: CurrentLineGeneratorTest.cpp  GaussTest.cpp
libs/MeshEntity/: CMakeLists.txt
libs/MeshEntity/include/: Cell.h  CellFaces.h  EdgeValues.h  Field.h  Field.hpp  GaussSolve.h  GeneralFormOfLine.h  GeneralFormOfPlane.h  Line.h  Line.hpp  Mesh.h  MeshType.h  Node.h  Node.hpp  Plane.h  PlaneIntersections.h  PlaneType.h  PlaneTypes.h  Point.h  Point.hpp
libs/MeshEntity/src/: Cell.cpp  Field.cpp  Line.cpp  Mesh.cpp  Node.cpp  Plane.cpp  Point.cpp
libs/MeshEntity/tests/: CMakeLists.txt  test.cpp
libs/MeshEntity/tests/src/: CellTest.cpp  FieldTest.cpp  GaussSolveTest.cpp  LineTest.cpp  MeshTest.cpp  NodeTest.cpp  PlaneTest.cpp  PointTest.cpp
libs/MeshWorker/: CMakeLists.txt
libs/MeshWorker/include/: MeshLoader.h  MeshLoader.hpp  MeshUnloading.h
libs/MeshWorker/src/: MeshLoader.cpp  MeshUnloading.cpp
libs/MeshWorker/tests/: CMakeLists.txt
libs/MeshWorker/tests/src/: MeshLoaderTest.cpp
src/CurrentLines/: CurrentLineGenerator.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/CurrentLines/: CurrentLineGenerator.cpp
tests/docktests/: docktests.h
